apps/suwayomi/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: suwayomi-https
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`suwayomi.oglesby.io`)
      kind: Rule
      services:
        - name: suwayomi
          port: 4567
  tls:
    certResolver: letsencrypt
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: suwayomi-http
  namespace: media
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`suwayomi.oglesby.io`)
      kind: Rule
      middlewares:
        - name: redirect-to-https
      services:
        - name: suwayomi
          port: 4567
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect-to-https
  namespace: media
spec:
  redirectScheme:
    scheme: https
    permanent: true
